opam-version: "2.0"
name:         "gstbuffer"
maintainer:   "Eugen Bulavin <ciceromarcus@yandex.ru>"
homepage:     "https://github.com/Freyr666/ats-analyzer"
bug-reports:  "https://github.com/Freyr666/ats-analyzer/issues"
dev-repo:     "git+https://github.com/Freyr666/ats-analyzer.git"
license:      "MIT"
synopsis:     "A tiny gstbuffer wrapper"
description: """
An OCaml wrapper for gstbuffer
"""

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
]
