opam-version: "2.0"
name:         "qoe_backend_types"
maintainer:   "Eugen Bulavin <ciceromarcus@yandex.ru>"
homepage:     "https://github.com/Freyr666/ats-analyzer"
bug-reports:  "https://github.com/Freyr666/ats-analyzer/issues"
dev-repo:     "git+https://github.com/Freyr666/ats-analyzer.git"
license:      "MIT"
synopsis:     "Qoe backend-related types"
description: """
An Lwt wrapper for qoe backend
Please, do not even try to use it on without
asking the permission since backend includes
stuff covered by patents.
"""

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "ppx_deriving"
  "ppx_deriving_yojson"
  "uuidm"
  "ptime"
  "uri"
]
