opam-version: "2.0"
name:         "qoe_ts_probe_lwt"
maintainer:   "Eugen Bulavin <ciceromarcus@yandex.ru>"
homepage:     "https://github.com/Freyr666/ats-analyzer"
bug-reports:  "https://github.com/Freyr666/ats-analyzer/issues"
dev-repo:     "git+https://github.com/Freyr666/ats-analyzer.git"
license:      "MIT"
synopsis:     "LWT qoe probe interface"
description: """
An Lwt wrapper for qoe probe
Please, do not even try to use it on without
asking the permission since backend includes
stuff covered by patents.
"""

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "qoe_ts_parse"
  "qoe_media_stream"
  "lwt"
  "lwt_react"
]
