[package]
name = "backend"
version = "0.1.0"
authors = ["Freyr <sky_rider_93@mail.ru>"]

[dependencies]
libc = ""
glib = "0.6"
glib-sys = "0.7"
gobject-sys = "0.7"
gstreamer = "0.12"
gstreamer-sys = "0.6"
gstreamer-video = "0.12"
gstreamer-mpegts-sys = "0.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
zmq = "0.8"
log = "0.4"