[package]
name = "backend"
version = "0.1.0"
authors = ["Freyr <sky_rider_93@mail.ru>"]

[lib]
name = "qoebackend"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = ""
glib = "0.9"
glib-sys = "0.9"
gobject-sys = "0.9"
gstreamer = "0.15"
gstreamer-sys = "0.8"
gstreamer-video = "0.15"
gstreamer-mpegts-sys = "0.8"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
log = "0.4"
