[package]
name = "tsprobe"
version = "0.1.0"
authors = ["Freyr <sky_rider_93@mail.ru>"]

[lib]
name = "tsprobe"
crate-type = ["staticlib", "cdylib"]

[dependencies]
media_stream = { path = "../media_stream" }
util = { path = "../util" }
libc = ""
glib = "0.7"
glib-sys = "0.8"
gobject-sys = "0.8"
gstreamer = "0.13"
gstreamer-sys = "0.7"
gstreamer-video = "0.13"
gstreamer-mpegts-sys = "0.7"
serde_json = "^1.0"